Moved 2022 problems to their own folder

--- a/AdventOfCode.Tests/AdventOfCode.Tests.csproj
+++ b/AdventOfCode.Tests/AdventOfCode.Tests.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\AdventOfCode\AdventOfCode.csproj" />
    </ItemGroup>
 
+   <ItemGroup>
+     <Folder Include="Aoc2022\" />
+   </ItemGroup>
+
 </Project>
